基本資料資訊及資料型別轉換筆記新增

--- a/資料處理/基本資料資訊/code.ipynb
+++ b/資料處理/基本資料資訊/code.ipynb
@@ -12,11 +12,11 @@
     "\n",
     "# 在進行資料運用之前先確認以下資料資訊並做以下處理 :\n",
     "\n",
-    "# a. 基本資料資訊 : 陣列大小 , 列數量 , 欄位數量 \n",
+    "# a. 基本資料資訊 : 陣列大小 , 列數量 , 欄位數量 + 欄位型別 , 是否有遺漏值\n",
     "\n",
-    "# b. 欄位型別及轉換\n",
+    "# b. 資料型別轉換\n",
     "\n",
-    "# c. 是否有 NaN 等遺漏值\n",
+    "# c. NaN 等遺漏值移除\n",
     "\n",
     "# d. 統計特徵\n"
    ]
@@ -134,6 +134,145 @@
     "total = dataframe.size\n",
     "\n",
     "print(total)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed60add1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. 確認各欄位型別及是否有遺漏值，以利後續處理"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41298e67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   日期      5 non-null      object\n",
+      " 1   名稱      5 non-null      object\n",
+      " 2   收盤價     5 non-null      int64 \n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 252.0+ bytes\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   日期      4 non-null      object \n",
+      " 1   名稱      5 non-null      object \n",
+      " 2   收盤價     3 non-null      float64\n",
+      "dtypes: float64(1), object(2)\n",
+      "memory usage: 252.0+ bytes\n",
+      "日期 []\n",
+      "名稱 [3]\n",
+      "      日期     名稱\n",
+      "0  False  False\n",
+      "1  False  False\n",
+      "2  False  False\n",
+      "3  False   True\n",
+      "4  False  False\n",
+      "      日期     名稱     聯集\n",
+      "0  False  False  False\n",
+      "1  False  False  False\n",
+      "2  False  False  False\n",
+      "3  False   True   True\n",
+      "4  False  False  False\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a. pandas \n",
+    "\n",
+    "\n",
+    "# info() 可以看各欄位的資料型別是否符合該有的型態 , 以及是否有遺漏值 , 很方便的功能\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",130],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "\n",
+    "dataframe.info()\n",
+    "\n",
+    "\n",
+    "# info() 的使用觀念 : \n",
+    "\n",
+    "\n",
+    "# 各種遺漏值只能看出 None 和 NaN ( 包含沒有填寫的空白 ) , 空白字串還是算正常的 , 要注意 \n",
+    "\n",
+    "data_row_2 = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",float(\"Nan\")],[\"20250803\",\"aaa\", ],[\"20250804\",\"   \",150],[None,\"aaa\",160]]\n",
+    "\n",
+    "dataframe_2 = pandas.DataFrame(data_row_2,columns=data_column)\n",
+    "\n",
+    "\n",
+    "dataframe_2.info()\n",
+    "\n",
+    "\n",
+    "# 如果要確認有沒有 \" \" 或 \"\" , 可以自己寫下面來確認\n",
+    "\n",
+    "# a. 先選出字串欄位\n",
+    "\n",
+    "select_rows = dataframe_2.select_dtypes(include=\"object\")\n",
+    "\n",
+    "# b. 再檢查是否有 \" \" 或 \"\" 遺漏值\n",
+    "\n",
+    "# b-1. 列出各欄位有遺漏值的資料列索引\n",
+    "\n",
+    "for col in select_rows.columns : \n",
+    "\n",
+    "    bool_array = (select_rows[col].str.strip()==\"\")\n",
+    "\n",
+    "    index = select_rows.index[select_rows[col].str.strip()==\"\"]\n",
+    "\n",
+    "    print(col,list(index))\n",
+    "\n",
+    "# b-2. 這邊可以選擇要不要做 , 把有遺漏值欄位取聯集列出資料列索引\n",
+    "\n",
+    "# 先取得各資料列布林值\n",
+    "\n",
+    "combine = pandas.DataFrame()\n",
+    "\n",
+    "for col in select_rows.columns : \n",
+    "\n",
+    "    bool_array = (select_rows[col].str.strip()==\"\")\n",
+    "\n",
+    "    combine = pandas.concat([combine,bool_array.to_frame()],axis=1)\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# 再做出一個新欄位是兩者的布林值聯集\n",
+    "\n",
+    "combine[\"聯集\"] = combine[combine.columns].any(axis=1)\n",
+    "\n",
+    "print(combine)\n",
+    "\n",
+    "# 最後取布林值聯集欄位並做出索引\n",
+    "\n",
+    "# 注意 df[\"聯集\"] 要從 series 轉成 list 才可以把布林值元素陣列給 df.index[] 使用\n",
+    "\n",
+    "index_union = list(combine.index[list(combine[\"聯集\"])])\n",
+    "\n",
+    "print(index_union)\n",
     "\n"
    ]
   }
