--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -431,7 +431,27 @@
     "\n",
     "# 基本觀念 : \n",
     "\n",
-    "# dataframe[\"欄位\"] 代表該欄位底下的資料列\n",
+    "\n",
+    "# a. 本質 \n",
+    "\n",
+    "# dataframe 可以看成是 dictionary 為基礎 ( list + 標籤 ) , 而 numpy array 則是 list 為基礎\n",
+    "\n",
+    "# dataframe 的欄位就是 dictionary 的 keys , 資料就是各個 keys 的 values \n",
+    "\n",
+    "# 因此 dataframe 可以直接用 dictionary 來產生 , 用 list 則是沒有欄位的版本\n",
+    "\n",
+    "# 例如 : pandas.Dataframe({ \"日期\" : [\"20250801\",\"20250802\"] , \"名稱\" : [\"aaa\",\"aaa\"] , \"收盤價\" : [120,130] })\n",
+    "\n",
+    "\n",
+    "# b. 欄位\n",
+    "\n",
+    "# dataframe[\"欄位\"] 代表該欄位底下的資料列 , 就和 dict[\"欄位\"] 代表每一個 keys 後面 values 一樣\n",
+    "\n",
+    "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... \n",
+    "\n",
+    "# 只是 dataframe[\"欄位\"] = ... 都是指派 list or iterable 為主 , 因為是一個 table 有多列資料的表格形式 \n",
+    "\n",
+    "# 例如 : dataframe[\"收盤價\"] = [120,130,140,150,160]\n",
     "\n",
     "# dataframe[\"欄位\"] > 0 代表該欄位底下的所有資料去做比較，並產生布林列\n",
     "\n",
@@ -443,11 +463,7 @@
     "\n",
     "# 一維除非是用 pandas.series 才會正確，而不是 dataframe\n",
     "\n",
-    "# dataframe 可以看成是 dictionary 為基礎 ( list + 標籤 ) , 而 numpy array 則是 list 為基礎\n",
     "\n",
-    "# 因此 dataframe 可以直接用 dictionary 來產生 , 用 list 則是沒有欄位的版本\n",
-    "\n",
-    "# 例如 : pandas.Dataframe({ \"日期\" : [\"20250801\",\"20250802\"] , \"名稱\" : [\"aaa\",\"aaa\"] , \"收盤價\" : [120,130] })\n",
     "\n",
     "\n",
     "\n",
@@ -659,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "30d3edc0",
    "metadata": {},
    "outputs": [
@@ -736,7 +752,13 @@
     "import numpy\n",
     "\n",
     "\n",
-    "# 1. dataframe 不能直接當 list 做 for 迴圈的 iterable 的讀取，會產生錯誤結果\n",
+    "# 1. dataframe 不能直接當 list 做 for 迴圈的 iterable 的讀取，會產生只有讀取欄位結果\n",
+    "\n",
+    "# 主要原因 : dataframe 本質就是 dictionary , 所以會和 dictionary 一樣 , 做 for 會只讀欄位標題 \n",
+    "\n",
+    "# 就是 dict.keys , dict.values , dict.items 裡面的 dict.keys , 而 keys 可以省略 , 所以 for dict or for dict.keys 就是在讀標題\n",
+    "\n",
+    "# 可以想成在讀 dictionary 的每一個元素的第一個元素 , 就是標題 , 看成 { \"日期\":[...] , \"名稱\":[...] , \"收盤價\":[...] }\n",
     "\n",
     "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
     "\n",
@@ -868,7 +890,7 @@
     "\n",
     "print(column_dataframe)\n",
     "\n",
-    "# # 列的序列 : 也是雙重中括號 iloc[[\"...\"]] , 或者 to_frame() 轉成 2D 再做 T 轉置\n",
+    "# 列的序列 : 也是雙重中括號 iloc[[\"...\"]] , 或者 to_frame() 轉成 2D 再做 T 轉置\n",
     "\n",
     "row_dataframe = dataframe.iloc[[0]]\n",
     "\n",
@@ -1092,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "08b401bf",
    "metadata": {},
    "outputs": [
@@ -1178,7 +1200,7 @@
     "\n",
     "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
     "\n",
-    "# 資料記得要用 2D 陣列 [[...] , [...] , ...] \n",
+    "# 資料記得要用 2D 陣列 [[...] , [...] , [...]] \n",
     "\n",
     "data_row = [[\"20250801\",\"aaa\",120]]\n",
     "\n",
@@ -1347,6 +1369,55 @@
     "print(select_4)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3b17d6b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "日期     20250803\n",
+      "名稱          aaa\n",
+      "收盤價         140\n",
+      "Name: 2, dtype: object\n",
+      "日期     20250803\n",
+      "名稱          aaa\n",
+      "收盤價         140\n",
+      "Name: 2, dtype: object\n",
+      "         日期   名稱  收盤價\n",
+      "0  20250801  aaa  NaN\n",
+      "1  20250802  aaa  NaN\n",
+      "2  20250803  aaa  NaN\n",
+      "3  20250804  aaa  NaN\n",
+      "4  20250805  aaa  NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "a = dataframe.iloc[2]\n",
+    "\n",
+    "b = dataframe.iloc[2,:]\n",
+    "\n",
+    "print(a)\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "dataframe[\"收盤價\"] = a\n",
+    "\n",
+    "print(dataframe)\n"
    ]
   }
  ],
