新增 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -449,7 +449,9 @@
     "\n",
     "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... \n",
     "\n",
-    "# 只是 dataframe[\"欄位\"] = ... 都是指派 list or iterable 為主 , 因為是一個 table 有多列資料的表格形式 \n",
+    "# dataframe[\"欄位\"] = ... 都是指派 list or iterable 為主 , 如果只指派一個值那就會填完完整長度 \n",
+    "\n",
+    "# 因為是一個 table 有多列資料的表格形式 , 必須要維持陣列完整大小\n",
     "\n",
     "# 例如 : dataframe[\"收盤價\"] = [120,130,140,150,160]\n",
     "\n",
@@ -1369,55 +1371,6 @@
     "print(select_4)\n",
     "\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "3b17d6b3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "日期     20250803\n",
-      "名稱          aaa\n",
-      "收盤價         140\n",
-      "Name: 2, dtype: object\n",
-      "日期     20250803\n",
-      "名稱          aaa\n",
-      "收盤價         140\n",
-      "Name: 2, dtype: object\n",
-      "         日期   名稱  收盤價\n",
-      "0  20250801  aaa  NaN\n",
-      "1  20250802  aaa  NaN\n",
-      "2  20250803  aaa  NaN\n",
-      "3  20250804  aaa  NaN\n",
-      "4  20250805  aaa  NaN\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas\n",
-    "\n",
-    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
-    "\n",
-    "data_row = [[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]]\n",
-    "\n",
-    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
-    "\n",
-    "a = dataframe.iloc[2]\n",
-    "\n",
-    "b = dataframe.iloc[2,:]\n",
-    "\n",
-    "print(a)\n",
-    "\n",
-    "print(b)\n",
-    "\n",
-    "dataframe[\"收盤價\"] = a\n",
-    "\n",
-    "print(dataframe)\n"
    ]
   }
  ],
