新增 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -426,10 +426,7 @@
     "\n",
     "\n",
     "\n",
-    "# dataframe 的基本篩選方式\n",
-    "\n",
-    "\n",
-    "# 基本觀念 : \n",
+    "# dataframe 的基本觀念 : \n",
     "\n",
     "\n",
     "# a. 本質 \n",
@@ -467,6 +464,7 @@
     "\n",
     "\n",
     "\n",
+    "# dataframe 的基本篩選方式 : \n",
     "\n",
     "\n",
     "# 1. 欄位 ( columns ) : 單純用 [] 和 欄位名稱 來做篩選即可\n",
