新增 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -446,6 +446,8 @@
     "\n",
     "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... \n",
     "\n",
+    "# 或者是 dataframe[\"欄位\"].函數() 的作法 , 表示對欄位底下的整行元素做運算處理 \n",
+    "\n",
     "# dataframe[\"欄位\"] = ... 都是指派 list or iterable 為主 , 如果只指派一個值那就會填完完整長度 \n",
     "\n",
     "# 因為是一個 table 有多列資料的表格形式 , 必須要維持陣列完整大小\n",
