新增 pandas 沒組筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -446,7 +446,11 @@
     "\n",
     "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... \n",
     "\n",
-    "# 或者是 dataframe[\"欄位\"].函數() 的作法 , 表示對欄位底下的整行元素做運算處理 \n",
+    "# 或者是 dataframe[\"欄位\"].函數() , 表示對欄位底下的整行元素做運算處理 \n",
+    "\n",
+    "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行逐列做每個元素做 , 只是變成多個欄位元素一起做\n",
+    "\n",
+    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成一樣是多欄位的情況 , 只是是全部欄位\n",
     "\n",
     "# dataframe[\"欄位\"] = ... 都是指派 list or iterable 為主 , 如果只指派一個值那就會填完完整長度 \n",
     "\n",
