新增 padnas 模組筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -446,7 +446,7 @@
     "\n",
     "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... \n",
     "\n",
-    "# 或者是 dataframe[\"欄位\"].函數() , 表示對欄位底下的整行元素做運算處理 \n",
+    "# 或者是 dataframe[\"欄位\"].函數() , + 3 , > 0 等 , 表示對欄位底下的整行元素做運算處理 , 這就是向量化處理\n",
     "\n",
     "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行逐列做每個元素做 , 只是變成多個欄位元素一起做\n",
     "\n",
