新增資料型別轉換筆記內容

--- a/資料處理/資料型別轉換/code.ipynb
+++ b/資料處理/資料型別轉換/code.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "print(array_5[0:1].dtype)\n",
     "\n",
-    "# 數值混和型 array 也會被轉成統一數值型別 , 像這邊 int 都被轉成 float\n",
+    "# 數值混和型 array 也會被轉成統一數值型別 , 像這邊 int 都被轉成 float ( upcasing , 轉成最寬鬆 , 可以容納所有當下元素型別的型別 ) \n",
     "\n",
     "array_6 = numpy.array([1,2,3])\n",
     "\n",
@@ -146,6 +146,114 @@
     "print(dataframe_2)\n",
     "\n",
     "dataframe_2.info()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0df53dd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['2025/08/01' 'aaa' 120]\n",
+      " ['2025/08/02' 'aaa' 130]\n",
+      " ['2025/08/03' 'aaa' 140]]\n",
+      "object\n",
+      "[dtype('O'), dtype('O'), dtype('O')]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[121 131 141]\n",
+      "[['2025/08/01' 'aaa' 120]\n",
+      " ['2025/08/02' 'aaa' 130]\n",
+      " ['2025/08/03' 'aaa' 140]]\n",
+      "object\n",
+      "[dtype('O'), dtype('O'), dtype('O')]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# pandas 轉 numpy 特例\n",
+    "\n",
+    "\n",
+    "import pandas\n",
+    "\n",
+    "\n",
+    "# a. df.values : \n",
+    "\n",
+    "\n",
+    "# 會轉成 numpy array , 但因為是 pandas 轉換的矩陣 , 所以 dtype 是混和型 object 而不會直接轉成字串 U21 , 元素還是保有原來型態\n",
+    "\n",
+    "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
+    "\n",
+    "data_row = [[\"2025/08/01\",\"aaa\",120],[\"2025/08/02\",\"aaa\",130],[\"2025/08/03\",\"aaa\",140]]\n",
+    "\n",
+    "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "# 可以發現 df.values 是 numpy array\n",
+    "\n",
+    "print(dataframe.values)\n",
+    "\n",
+    "# 型別確實是 object\n",
+    "\n",
+    "print(dataframe.values.dtype)\n",
+    "\n",
+    "# 每行顯示也是這樣 ( dtype(\"O\") 就是 object , 不是 0 )\n",
+    "\n",
+    "datatype = [dataframe.values[:,i].dtype for i in range(len(dataframe.columns))]\n",
+    "\n",
+    "print(datatype)\n",
+    "\n",
+    "# 每個元素看就發現真的是原來型態\n",
+    "\n",
+    "for row in dataframe.values : \n",
+    "\n",
+    "    value = [type(item) for item in row]\n",
+    "\n",
+    "    print(value) \n",
+    "\n",
+    "# 轉成 numpy array 後的數值欄位也真的可以運算\n",
+    "\n",
+    "array = dataframe.values[:,2] + 1\n",
+    "\n",
+    "print(array)\n",
+    "\n",
+    "\n",
+    "# b. to_numpy() : \n",
+    "\n",
+    "# 用這個方法會更好 , 因為會保留 datetime , categorical 等等的型別\n",
+    "\n",
+    "# 基本上用這個方法結果會一樣\n",
+    "\n",
+    "array_2 = dataframe.to_numpy()\n",
+    "\n",
+    "print(array_2)\n",
+    "\n",
+    "# 再次檢查陣列型別\n",
+    "\n",
+    "print(array_2.dtype)\n",
+    "\n",
+    "# 每行的型別\n",
+    "\n",
+    "datatype_2 = [array_2[:,i].dtype for i in range(array_2.shape[1])]\n",
+    "\n",
+    "print(datatype_2)\n",
+    "\n",
+    "# 每個元素的型別\n",
+    "\n",
+    "for row in array_2 : \n",
+    "\n",
+    "    datatype_3 = [type(item) for item in row]\n",
+    "\n",
+    "    print(datatype_3)\n",
+    "\n",
     "\n"
    ]
   },
