新增 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -789,7 +789,7 @@
     "\n",
     "# 兩種函數方式取每列資料 : \n",
     "\n",
-    "# 可以用 range(len(df)) 或 df.index 來當迴圈變數\n",
+    "# 可以用 range(len(df)) 或 range(df.shape[0]) 或 df.index 來當迴圈變數\n",
     "\n",
     "\n",
     "# a. iterrows() : \n",
