新增資料型別轉換筆記內容

--- a/資料處理/資料型別轉換/code.ipynb
+++ b/資料處理/資料型別轉換/code.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "0df53dd9",
    "metadata": {},
    "outputs": [
@@ -159,23 +159,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['2025/08/01' 'aaa' 120]\n",
-      " ['2025/08/02' 'aaa' 130]\n",
-      " ['2025/08/03' 'aaa' 140]]\n",
+      "[[Timestamp('2025-08-01 00:00:00') 'aaa' 120]\n",
+      " [Timestamp('2025-08-02 00:00:00') 'aaa' 130]\n",
+      " [Timestamp('2025-08-03 00:00:00') 'aaa' 140]]\n",
       "object\n",
       "[dtype('O'), dtype('O'), dtype('O')]\n",
-      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
-      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
-      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'pandas._libs.tslibs.timestamps.Timestamp'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'pandas._libs.tslibs.timestamps.Timestamp'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'pandas._libs.tslibs.timestamps.Timestamp'>, <class 'str'>, <class 'int'>]\n",
       "[121 131 141]\n",
-      "[['2025/08/01' 'aaa' 120]\n",
-      " ['2025/08/02' 'aaa' 130]\n",
-      " ['2025/08/03' 'aaa' 140]]\n",
+      "[[Timestamp('2025-08-01 00:00:00') 'aaa' 120]\n",
+      " [Timestamp('2025-08-02 00:00:00') 'aaa' 130]\n",
+      " [Timestamp('2025-08-03 00:00:00') 'aaa' 140]]\n",
       "object\n",
       "[dtype('O'), dtype('O'), dtype('O')]\n",
-      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
-      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
-      "[<class 'str'>, <class 'str'>, <class 'int'>]\n"
+      "[<class 'pandas._libs.tslibs.timestamps.Timestamp'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'pandas._libs.tslibs.timestamps.Timestamp'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'pandas._libs.tslibs.timestamps.Timestamp'>, <class 'str'>, <class 'int'>]\n"
      ]
     }
    ],
@@ -196,6 +196,10 @@
     "data_row = [[\"2025/08/01\",\"aaa\",120],[\"2025/08/02\",\"aaa\",130],[\"2025/08/03\",\"aaa\",140]]\n",
     "\n",
     "dataframe = pandas.DataFrame(data_row,columns=data_column)\n",
+    "\n",
+    "# 這邊用 strptime() 結果會一樣\n",
+    "\n",
+    "dataframe[\"日期\"] = pandas.to_datetime(dataframe[\"日期\"])\n",
     "\n",
     "# 可以發現 df.values 是 numpy array\n",
     "\n",
@@ -228,9 +232,9 @@
     "\n",
     "# b. to_numpy() : \n",
     "\n",
-    "# 用這個方法會更好 , 因為會保留 datetime , categorical 等等的型別\n",
-    "\n",
     "# 基本上用這個方法結果會一樣\n",
+    "\n",
+    "# 似乎個方法會更好 , 因為會保留 datetime , categorical 等等的型別 , 但上面結果一樣有保留\n",
     "\n",
     "array_2 = dataframe.to_numpy()\n",
     "\n",
@@ -254,6 +258,17 @@
     "\n",
     "    print(datatype_3)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d7d8026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# numpy 轉 pandas 特例 \n",
     "\n"
    ]
   },
