新增 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -444,13 +444,9 @@
     "\n",
     "# dataframe[\"欄位\"] 代表該欄位底下的資料列 , 就和 dict[\"欄位\"] 代表每一個 keys 後面 values 一樣\n",
     "\n",
-    "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... \n",
+    "# 因此會常常看到 dataframe[\"欄位\"] = ... 的方式來操作 , 就和 dictionary 的 dict[\"keys\"] = ... 一樣 \n",
     "\n",
     "# 或者是 dataframe[\"欄位\"].函數() , + 3 , > 0 等 , 表示對欄位底下的整行元素做運算處理 , 這就是向量化處理\n",
-    "\n",
-    "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行逐列做每個元素做 , 只是變成多個欄位元素一起做\n",
-    "\n",
-    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成一樣是多欄位的情況 , 只是是全部欄位\n",
     "\n",
     "# dataframe[\"欄位\"] = ... 都是指派 list or iterable 為主 , 如果只指派一個值那就會填完完整長度 \n",
     "\n",
@@ -467,6 +463,23 @@
     "# 例如 : pandas.Dataframe([[\"20250801\",\"aaa\",\"120\"]] , columns = column_list)\n",
     "\n",
     "# 一維除非是用 pandas.series 才會正確，而不是 dataframe\n",
+    "\n",
+    "\n",
+    "# c. 向量化處理特性 : \n",
+    "\n",
+    "# dataframe[\"欄位\"].函數() , + 3 , > 0 等 , 表示對欄位底下的整行元素做運算處理 , 這就是向量化處理\n",
+    "\n",
+    "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行(整塊)元素同時運算 , 只是變成多個欄位元素同時一起做橫向運算\n",
+    "\n",
+    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成是欄 + 列的同時向量化計算\n",
+    "\n",
+    "# 向量化計算就是整個(記憶體)區塊直接運算 , 例如(多)欄 , (多)列 , 或 欄和列一起 的一個陣列 / 矩陣直接同時運算 \n",
+    "\n",
+    "# 用到 for 就不是向量化計算 , 向量化運算沒有逐行或逐列的概念 , 但還是有用 C 底層 C-level loop 來算 , \n",
+    " \n",
+    "# 但不是 python 的 for , C loop 會迴圈一次性編譯為機器碼 , 再由整塊記憶體一次性處理 , \n",
+    "\n",
+    "# python for 則是一個一個元素由 python intepreter 處理解譯型別 , 邏輯 , 記憶體位置等等\n",
     "\n",
     "\n",
     "\n",
