--- a/資料處理/資料型別轉換/code.ipynb
+++ b/資料處理/資料型別轉換/code.ipynb
@@ -189,7 +189,7 @@
     "# a. df.values : \n",
     "\n",
     "\n",
-    "# 會轉成 numpy array , 但因為是 pandas 轉換的矩陣 , 所以 dtype 是混和型 object 而不會直接轉成字串 U21 , 元素還是保有原來型態\n",
+    "# 會轉成 numpy array , 但因為是從 pandas 轉換來的矩陣 , 所以 dtype 是混和型 object 而不會直接轉成字串 U21 , 元素還是保有原來型態\n",
     "\n",
     "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
     "\n",
@@ -215,7 +215,7 @@
     "\n",
     "print(datatype)\n",
     "\n",
-    "# 每個元素看就發現真的是原來型態\n",
+    "# 每個元素來看就發現真的是原來型態\n",
     "\n",
     "for row in dataframe.values : \n",
     "\n",
@@ -234,7 +234,7 @@
     "\n",
     "# 基本上用這個方法結果會一樣\n",
     "\n",
-    "# 似乎個方法會更好 , 因為會保留 datetime , categorical 等等的型別 , 但上面結果一樣有保留\n",
+    "# 似乎這個方法會更好 , 因為會保留 datetime , categorical 等等的型別 , 但上面結果一樣有保留\n",
     "\n",
     "array_2 = dataframe.to_numpy()\n",
     "\n",
@@ -263,12 +263,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "1d7d8026",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U21\n",
+      "[dtype('<U21'), dtype('<U21'), dtype('<U21')]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5 entries, 0 to 4\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   日期      5 non-null      object\n",
+      " 1   名稱      5 non-null      object\n",
+      " 2   收盤價     5 non-null      object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 252.0+ bytes\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n",
+      "[<class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>, <class 'numpy.str_'>]\n"
+     ]
+    }
+   ],
    "source": [
     "# numpy 轉 pandas 特例 \n",
+    "\n",
+    "\n",
+    "import numpy\n",
+    "import pandas\n",
+    "\n",
+    "\n",
+    "# 1. 先看 numpy array 的資料型別\n",
+    "\n",
+    "array_column = numpy.array([\"日期\",\"名稱\",\"收盤價\"])\n",
+    "\n",
+    "array_row = numpy.array([[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]])\n",
+    "\n",
+    "# 整體的型別\n",
+    "\n",
+    "print(array_row.dtype)\n",
+    "\n",
+    "# 每一行的型別 , 結果真的就是 U21 , 不是 pandas 轉 numpy 是保留個元素型別的 object \n",
+    "\n",
+    "column_type = [array_row[:,i].dtype for i in range(array_row.shape[1])]\n",
+    "\n",
+    "print(column_type)\n",
+    "\n",
+    "# 每一個元素的型別 , 真的是字串\n",
+    "\n",
+    "for row in array_row : \n",
+    "\n",
+    "    element_type = [type(x) for x in row]\n",
+    "\n",
+    "    print(element_type)\n",
+    "\n",
+    "\n",
+    "# 2. 轉成 pandas dataframe 後的資料型別\n",
+    "\n",
+    "# 轉成 dataframe\n",
+    "\n",
+    "dataframe = pandas.DataFrame.from_records(array_row,columns=array_column)\n",
+    "\n",
+    "# 看各欄位型別 , 結果是 object\n",
+    "\n",
+    "dataframe.info()\n",
+    "\n",
+    "# 再看各元素 , 可是是 numpy.str \n",
+    "\n",
+    "for i in range(dataframe.shape[1]) : \n",
+    "\n",
+    "    element_type_2 = [type(x) for x in dataframe.iloc[:,i]]\n",
+    "\n",
+    "    print(element_type_2)\n",
+    "\n",
+    "\n",
+    "# 結論 : 如果是 numpy 轉 pandas , 因為 numpy 本身強調元素一致性 , 所以混和陣列不會保留各元素型別 , 全部都會是 U21 / U32 字串 , \n",
+    "\n",
+    "#        所以轉成 dataframe 還是得要自己手動轉換型別回來\n",
     "\n"
    ]
   },
