新增資料型別轉換筆記內容

--- a/資料處理/資料型別轉換/code.ipynb
+++ b/資料處理/資料型別轉換/code.ipynb
@@ -34,6 +34,7 @@
       " ['b' '5' '6']\n",
       " ['c' '8' '9']]\n",
       "<U21\n",
+      "[dtype('<U21'), dtype('<U21'), dtype('<U21')]\n",
       "int64\n",
       "float64\n"
      ]
@@ -55,11 +56,21 @@
     "\n",
     "print(array_5)\n",
     "\n",
-    "# 但是只要是混和型 array , 全部元素都會自動轉型成 object 混和型 ( 通常不是純數值 , 而是文字 + 數字 ) 或 str 或 u21 / u32 的文字型別 , 用 dtype 屬性可以檢視\n",
+    "# 但是只要是混和型 array , 全部元素都會自動轉型成 object 混和型 ( 通常不是純數值 , 而是文字 + 數字 ) 或 str 或 u21 / u32 的文字型別 或其他統一型別 ,\n",
+    "\n",
+    "# 因為 numpy 設計目的是一致(數字)型別元素的矩陣 ( 有欄和列的使用但不是重點 ) , 以利高效率運算 ( 像是 numpy 函數本質是用 C 架構 ) , 所以會進行轉換 , \n",
+    "\n",
+    "# 以利陣列所有元素型別一致 , 用 dtype 屬性可以檢視\n",
+    "\n",
+    "print(array_5.dtype)\n",
     "\n",
     "# 或者是上面 array_2 檢視結果就可以發現都是字串\n",
     "\n",
-    "print(array_5[0:1].dtype)\n",
+    "# 檢視各個欄位確實也是和陣列本身一樣型別\n",
+    "\n",
+    "column_type = [array_5[:,i].dtype for i in range(array_5.shape[1])]\n",
+    "\n",
+    "print(column_type)\n",
     "\n",
     "# 數值混和型 array 也會被轉成統一數值型別 , 像這邊 int 都被轉成 float ( upcasing , 轉成最寬鬆 , 可以容納所有當下元素型別的型別 ) \n",
     "\n",
@@ -87,30 +98,21 @@
       "0  20250801  aaa  120\n",
       "1  20250802  aaa  130\n",
       "2  20250803  aaa  140\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3 entries, 0 to 2\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   日期      3 non-null      object\n",
-      " 1   名稱      3 non-null      object\n",
-      " 2   收盤價     3 non-null      object\n",
-      "dtypes: object(3)\n",
-      "memory usage: 204.0+ bytes\n",
+      "日期     object\n",
+      "名稱     object\n",
+      "收盤價    object\n",
+      "dtype: object\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
+      "[<class 'str'>, <class 'str'>, <class 'str'>]\n",
+      "[<class 'str'>, <class 'str'>, <class 'int'>]\n",
       "         日期   名稱  收盤價\n",
       "0  20250801  aaa  120\n",
       "1  20250802  aaa  130\n",
       "2  20250803  aaa  140\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3 entries, 0 to 2\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   日期      3 non-null      object\n",
-      " 1   名稱      3 non-null      object\n",
-      " 2   收盤價     3 non-null      int64 \n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 204.0+ bytes\n"
+      "日期     object\n",
+      "名稱     object\n",
+      "收盤價     int64\n",
+      "dtype: object\n"
      ]
     }
    ],
@@ -120,7 +122,14 @@
     "\n",
     "# b. pandas \n",
     "\n",
-    "# pandas 和 numpy 一樣 , 只要一欄有一個資料是文字 , 剩下都會轉成文字\n",
+    "# pandas 和 numpy 不同 , 是以儲存不同類型資料作為表格和資料分析為目標 ( 像是具有 SQL 的 group by 或較多的遺漏值移除方法 ) , 因此以欄位為單位可以放不同類型資料\n",
+    "\n",
+    "# 但 pandas 和 numpy 一樣 , 各欄位為單位的資料行底下只要有一個資料型別不同 , 就會進行 upcasing , 轉成可以接受所有該欄位資料的型別 , \n",
+    "\n",
+    "# 而最大的 dataframe 本身就會是 object , 可以儲存多種形別資料 , 可以看下面 dataframe.dtypes 的結果 \n",
+    "\n",
+    "\n",
+    "# 下面是文字的例子 , 原本是數字的欄位 , 有出現一個文字 , 欄位就會轉成寬鬆的 object 混合類型\n",
     "\n",
     "data_column = [\"日期\",\"名稱\",\"收盤價\"]\n",
     "\n",
@@ -132,10 +141,17 @@
     "\n",
     "print(dataframe)\n",
     "\n",
-    "# 要用 info 看各欄位 dtype\n",
+    "# 要用 info() 或 dtypes 看各欄位 dtype\n",
     "\n",
-    "dataframe.info()\n",
+    "print(dataframe.dtypes)\n",
     "\n",
+    "# 看各個元素型別 , 各元素確實還是保有原本型別 , 但是欄位就是 object 比較寬鬆的文字 + 數字混和型\n",
+    "\n",
+    "for i in range(dataframe.shape[0]) : \n",
+    "\n",
+    "    row_type = [type(x) for x in dataframe.iloc[i,:]]\n",
+    "\n",
+    "    print(row_type)\n",
     "\n",
     "# 改成數字全部一致就正確了\n",
     "\n",
@@ -145,7 +161,7 @@
     "\n",
     "print(dataframe_2)\n",
     "\n",
-    "dataframe_2.info()\n",
+    "print(dataframe_2.dtypes)\n",
     "\n"
    ]
   },
@@ -232,9 +248,11 @@
     "\n",
     "# b. to_numpy() : \n",
     "\n",
+    "\n",
     "# 基本上用這個方法結果會一樣\n",
     "\n",
     "# 似乎這個方法會更好 , 因為會保留 datetime , categorical 等等的型別 , 但上面結果一樣有保留\n",
+    "\n",
     "\n",
     "array_2 = dataframe.to_numpy()\n",
     "\n",
@@ -263,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "1d7d8026",
    "metadata": {},
    "outputs": [
@@ -304,6 +322,7 @@
     "\n",
     "# 1. 先看 numpy array 的資料型別\n",
     "\n",
+    "\n",
     "array_column = numpy.array([\"日期\",\"名稱\",\"收盤價\"])\n",
     "\n",
     "array_row = numpy.array([[\"20250801\",\"aaa\",120],[\"20250802\",\"aaa\",130],[\"20250803\",\"aaa\",140],[\"20250804\",\"aaa\",150],[\"20250805\",\"aaa\",160]])\n",
@@ -328,6 +347,7 @@
     "\n",
     "\n",
     "# 2. 轉成 pandas dataframe 後的資料型別\n",
+    "\n",
     "\n",
     "# 轉成 dataframe\n",
     "\n",
