新增 padnas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -467,11 +467,11 @@
     "\n",
     "# c. 向量化處理特性 : \n",
     "\n",
-    "# dataframe[\"欄位\"].函數() , + 3 , > 0 等 , 表示對欄位底下的整行元素做運算處理 , 這就是向量化處理 ( 整行 / 整塊運算 )\n",
+    "# dataframe[\"欄位\"].函數() , + 3 , > 0 等 , 表示對欄位底下的整行元素做運算處理 , 這就是向量化處理 ( 整行 / 整塊運算 , 以整行欄位為基礎計算單位 )\n",
     "\n",
     "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行(整塊)元素同時運算 , 只是變成多個欄位元素同時一起做橫向運算\n",
     "\n",
-    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成是欄位下的列 + 橫向的欄的同時向量化計算 / 多欄位的全體欄位向量化(一整塊)計算版本\n",
+    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成是縱向的欄位(基礎計算單位) + 橫向的所有欄的同時向量化計算 / 多欄位的全體欄位向量化(一整塊)計算版本\n",
     "\n",
     "# 向量化計算就是整個(記憶體)區塊直接運算 , 例如(多)欄 , (多)列 , 或 欄和列一起 的一個陣列 / 矩陣直接同時運算 \n",
     "\n",
