新增 padnas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -469,11 +469,13 @@
     "\n",
     "# dataframe[\"欄位\"].函數() , + 3 , > 0 等 , 表示對欄位底下的整行元素做運算處理 , 這就是向量化處理 ( 整行 / 整塊運算 , 以整行欄位為基礎計算單位 )\n",
     "\n",
-    "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行(整塊)元素同時運算 , 只是變成多個欄位元素同時一起做橫向運算\n",
+    "# 或 dataframe[[多欄位]].any() 的作法 , 一樣是整行(整塊)元素同時運算 , 只是變成多個欄位之間元素同時一起做橫向運算\n",
     "\n",
-    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成是縱向的欄位(基礎計算單位) + 橫向的所有欄的同時向量化計算 / 多欄位的全體欄位向量化(一整塊)計算版本\n",
+    "# 或 dataframe.函數() , 表示對全部陣列元素做運算 , 基本上可以看成是縱向的欄位(基礎計算單位) + 橫向的所有欄的同時向量化計算 / 欄位(基礎計算單位)的全體欄位向量化(一整塊)計算版本\n",
     "\n",
-    "# 向量化計算就是整個(記憶體)區塊直接運算 , 例如(多)欄 , (多)列 , 或 欄和列一起 的一個陣列 / 矩陣直接同時運算 \n",
+    "# 向量化計算就是整個(記憶體)區塊直接運算 , 例如單欄 , 欄和欄之間一起 , 多欄 的一整個 陣列 / 矩陣 直接同時運算 \n",
+    "\n",
+    "# 橫向的列不會有向量化計算 , 列之間有計算是應該看成以欄為單位之間做計算 , 因為各欄的資料型態都不同 , 無法用列做為資料 , 需要以欄的同一性質資料為基礎來做向量化計算\n",
     "\n",
     "# 用到 for 就不是向量化計算 , 向量化運算沒有逐行或逐列的概念 , 但還是有用 C 底層 C-level loop 來算 , \n",
     " \n",
