修改資料型別轉換筆記內榮

--- a/資料處理/資料型別轉換/code.ipynb
+++ b/資料處理/資料型別轉換/code.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "bbb68c53",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
     "\n",
     "# 但是只要是混和型 array , 全部元素都會自動轉型成 object 混和型 ( 通常不是純數值 , 而是文字 + 數字 ) 或 str 或 u21 / u32 的文字型別 或其他統一型別 ,\n",
     "\n",
-    "# 因為 numpy 設計目的是一致(數字)型別元素的矩陣 ( 有欄和列的使用但不是重點 ) , 以利高效率運算 ( 像是 numpy 函數本質是用 C 架構 ) , 所以會進行轉換 , \n",
+    "# 因為 numpy 設計目的是一致(數字)型別元素的矩陣 ( 因此有矩陣欄和列的使用但不是重點 ) , 以利高效率運算 ( 像是 numpy 函數本質是用 C 架構 ) , 所以會進行轉換 , \n",
     "\n",
     "# 以利陣列所有元素型別一致 , 用 dtype 屬性可以檢視\n",
     "\n",
