修改 pandas 筆記內容

--- a/python 模組使用練習/pandas 模組.ipynb
+++ b/python 模組使用練習/pandas 模組.ipynb
@@ -1030,6 +1030,9 @@
     "# pandas 其他技巧 2\n",
     "\n",
     "\n",
+    "import pandas\n",
+    "\n",
+    "\n",
     "# 3. 可以結合 loc() + 布林陣列 + 新產生欄位 挑選到預先產生欄位的特定位置 來新增判斷結果的欄位\n",
     "\n",
     "# 這樣就不用寫 if df.loc[...] + df[\"新欄位\"] = ... 這樣兩段 , 比較簡單\n",
