修改資料型別轉換筆記內容

--- a/資料處理/資料型別轉換/code.ipynb
+++ b/資料處理/資料型別轉換/code.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "1d7d8026",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
     "import pandas\n",
     "\n",
     "\n",
-    "# 1. 先看 numpy array 的資料型別\n",
+    "# a. 先看 numpy array 的資料型別\n",
     "\n",
     "\n",
     "array_column = numpy.array([\"日期\",\"名稱\",\"收盤價\"])\n",
@@ -346,7 +346,7 @@
     "    print(element_type)\n",
     "\n",
     "\n",
-    "# 2. 轉成 pandas dataframe 後的資料型別\n",
+    "# b. 轉成 pandas dataframe 後的資料型別\n",
     "\n",
     "\n",
     "# 轉成 dataframe\n",
