修改遺漏值處理筆記內容

--- a/資料處理/遺漏值處理/code.ipynb
+++ b/資料處理/遺漏值處理/code.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "\n",
     "\n",
-    "# 2. 轉換成 NaN\n",
+    "# 2. 轉換成 NaN 並用 Dropna() 移除\n",
     "\n",
     "\n",
     "\n",
@@ -203,7 +203,7 @@
     "\n",
     "\n",
     "\n",
-    "# 3. 移除 NaN\n",
+    "# c. 移除 NaN\n",
     "\n",
     "# 轉換成 NaN 之後用模組的函數來移除，例如 pandas.dropna()\n",
     "\n",
@@ -217,7 +217,7 @@
     "\n",
     "\n",
     "\n",
-    "# 4. 找出 NaN \n",
+    "# d. 找出 NaN \n",
     "\n",
     "# 只能用布林陣列的方法 , 簡單來說就是用 isin([ ... , ... ]) 還有 isna() 本身為 True 來找出異常列，\n",
     "\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "20042549",
    "metadata": {},
    "outputs": [
@@ -322,9 +322,9 @@
     "\n",
     "\n",
     "\n",
-    "# 4. 其他方式 1 : 布林陣列\n",
+    "# 3. 其他方式 1 : 布林陣列來移除遺漏值\n",
     "\n",
-    "# pandas / numpy : isna() , isnan() 形成布林陣列來篩選移除\n",
+    "# pandas / numpy : isin() , isna() , isnan() 形成布林陣列來篩選移除\n",
     "\n",
     "\n",
     "\n",
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "0453e4af",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
     "\n",
     "\n",
     "\n",
-    "# 5. 其他方式 2 : python 原生方式 / 一個一個元素讀取方式\n",
+    "# 4. 其他方式 2 : python 原生方式 / 一個一個元素讀取方式來辨識並移除遺漏值(列)\n",
     "\n",
     "# List comprehension + if : 直接一個一個元素辨識並挑選不是遺漏值的元素\n",
     "\n",
