新增基本資料資訊筆記

--- a/資料處理/基本資料資訊/code.ipynb
+++ b/資料處理/基本資料資訊/code.ipynb
@@ -14,11 +14,15 @@
     "\n",
     "# a. 基本資料資訊 : 陣列大小 , 列數量 , 欄位數量 + 檢查欄位型別是否正確 , 是否有遺漏值\n",
     "\n",
-    "# b. 資料型別轉換\n",
+    "# b. NaN 等遺漏值移除\n",
     "\n",
-    "# c. NaN 等遺漏值移除\n",
+    "# c. 字串處理\n",
     "\n",
-    "# d. 統計特徵 ( 欄位間是否有高度相關等等 ) \n"
+    "# d. 資料型別轉換\n",
+    "\n",
+    "# e. 統計特徵 ( 欄位間是否有高度相關等等 ) \n",
+    "\n",
+    "# f. 額外數值轉換 ( standardlization , dummy variables ) \n"
    ]
   },
   {
